--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -204,6 +204,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Questions\Index.cshtml" />
     <Content Include="Views\Questions\Create.cshtml" />
+    <Content Include="Views\Questions\Read.cshtml" />
+    <Content Include="Views\Questions\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
